Edited wiki page through web user interface.

--- a/wiki/VariablesDeTemplates.wiki
+++ b/wiki/VariablesDeTemplates.wiki
@@ -9,7 +9,7 @@ Se usa en los htmls variables que llena el servidor, para que se pasen datos al 
 == Variables en los juegos ==
  * _hacerPreguntas_: El contenido de esto se evalua en un string que puede ser 'true' o 'false'. Representa si se quiere invocar al módulo de hacer preguntas o no.
  * _tipoDePregunta_: Declara qué tipo de preguntas se están haciendo. Puede evaluarse en '1' o en '2'. Un uno simboliza que las preguntas van a ser de tipo *recordar imágenes*, y un dos simboliza que las preguntas van a ser de tipo *recordar dato*. Si _hacerPreguntas_ está en 'false', el contenido de esta variable puede ser cualquier cosa y debe ser ignorado.
- * _img *X*_: Cuando se están haciendo preguntas de tipo *recordar imágenes*, estas variables son evaluadas como un número del 1 al 15, que representa la imagen que fue mostrada, de acuerdo al arreglo de las imagenes '#m.jpg'. La *X* representa un número del 1 al 3 con la posición de la imágen. Ej img1 -> la primer imagen. Si el contenido de la variable _hacerPreguntas_ es 'false', o el contenido de _tipoDePregunta_ no es '1' el contenido de esta variable puede ser cualquier cosa y debe ser ignorado.
+ * _img *X*_: (Sin espacio entre la X y 'img') Cuando se están haciendo preguntas de tipo *recordar imágenes*, estas variables son evaluadas como un número del 1 al 15, que representa la imagen que fue mostrada, de acuerdo al arreglo de las imagenes '#m.jpg'. La *X* representa un número del 1 al 3 con la posición de la imágen. Ej img1 -> la primer imagen. Si el contenido de la variable _hacerPreguntas_ es 'false', o el contenido de _tipoDePregunta_ no es '1' el contenido de esta variable puede ser cualquier cosa y debe ser ignorado.
  * _datos_: Esta variable de template escribe un arreglo de 2 dimensiones con los contenidos de los datos. En la primer dimención arreglo[X], están multiples arreglos que tienen 2 contenidos, el dato y la palabra clave. La forma en que se podría ver este arrelgo sería [ ["Cristobal Colon descubrio America", "Colon], ["El tec fue fundado por Eugenio Garza Sada", "tec] ]. Pese a que sigue el formato de javascript, no pone el punto y coma al final. Si el contenido de la variable _hacerPreguntas_ es 'false', o el contenido de _tipoDePregunta_ no es '2' el contenido de esta variable puede ser cualquier cosa y debe ser ignorado.
 
 === Variables de las alertas ===
