Edited wiki page through web user interface.

--- a/wiki/GuiaDeEstilo.wiki
+++ b/wiki/GuiaDeEstilo.wiki
@@ -6,13 +6,12 @@ El diseno sera amigable con finalidades practicas, facil de usar, sera de estilo
 
 = Consideraciones generales =
 
-Los fonts seran medianos y grandes para su facil lectura del usuario.
-Tendra colores claros, los cuales tienen como fin la tranquilidad del usuario. Asi como colores pocos llamativos con el fin de concentrar al usuario en la parte de la aplicacion que este utilizando.(1)
+Los fonts seran grandes y extra grandes para su facil lectura del usuario, ya que la mayoria de las personas de tercera edad sufren de algo llamado DMAE (Degeneración macular asociada a la edad) (2). Tendra colores claros, los cuales tienen como fin la tranquilidad del usuario. Asi como colores pocos llamativos con el fin de concentrar al usuario en la parte de la aplicacion que este utilizando.(1)
 
 = Elementos de la página =
 === Texto ===
  * Font a utilizar: Verdana
- * Tamaño: mediano (16px)
+ * Tamaño: Grande (22px)
  * Color: negro
 
 === Links ===
@@ -46,3 +45,4 @@ Tendra colores claros, los cuales tienen como fin la tranquilidad del usuario. A
  * Texto: Verdana
 
 (1) Construtips.com. (2005, Septiembre 3). Colors. Retrieved Octubre 10, 2008, from http://www.construtips.com/color.html
+(2) ^ John Paul SanGiovanni, ScD; Emily Y. Chew, MD; Traci E. Clemons, PhD; Matthew D. Davis, MD; Frederick L. Ferris III, MD; Gary R. Gensler, MS; Natalie Kurinij, PhD; Anne S. Lindblad, PhD; Roy C. Milton, PhD; Johanna M. Seddon, MD; and Robert D. Sperduto, MD (May 5, 2007). "The Relationship of Dietary Lipid Intake and Age-Related Macular Degeneration in a Case-Control Study". Archives of Ophthamology.
